XSLT transformation working - closes #1, ( also: reorganized submodules, updated dev tools - closes #14,  switched to using promises with Q)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "public/lib/enketo-core"]
-	path = public/lib/enketo-core
+[submodule "lib/enketo-core"]
+	path = lib/enketo-core
 	url = https://github.com/MartijnR/enketo-core.git
-[submodule "public/lib/enketo-xslt"]
-	path = public/lib/enketo-xslt
+[submodule "lib/enketo-xslt"]
+	path = lib/enketo-xslt
 	url = https://github.com/MartijnR/enketo-xslt.git
