added OpenRosa communication module - closes #12, made internal APIs return promises - closes #15, refactored routing - #11 and controller

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "morgan": "~1.0.0",
     "node_xslt": "^0.1.9",
     "q": "^1.0.1",
-    "request": "^2.34.0"
+    "request": "^2.34.0",
+    "xml2js": "^0.4.2"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
