--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
         "morgan": "~1.0.0",
         "node_xslt": "^0.1.9",
         "q": "^1.0.1",
+        "redis": "^0.10.1",
         "request": "^2.34.0",
         "xml2js": "^0.4.2"
     },
     "devDependencies": {
+        "mocha": "*",
+        "chai": "*",
+        "chai-as-promised": "*",
         "grunt": "^0.4.4",
         "grunt-concurrent": "^0.5.0",
         "grunt-contrib-jshint": "^0.10.0",
