most views (html + css) added, closes #13, closes #17, closes #19, closes #21, #11

--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
     "app name": "Enketo Smart Paper for KoBoCAT",
     "openrosa server": "KoBoCAT",
-    "port": "8005"
+    "port": "8005",
+    "google analytics ua": "",
+    "google analytics domain": "www.example.org",
+    "support email": "nobody@nosupport.com"
 }
