--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
     "app name": "Enketo Smart Paper for KoBoCAT",
-    "openrosa server": "KoBoCAT",
+    "openrosa server name": "KoBoCAT",
+    "openrosa server url": "ona.io",
+    "enketo api key": "enketorules!",
     "port": "8005",
     "support email": "nobody@nosupport.com",
     "google analytics ua": "",
