added XSLT cache, closes #2

--- a/config.json
+++ b/config.json
@@ -4,6 +4,10 @@
     "openrosa server url": "ona.io",
     "enketo api key": "enketorules!",
     "port": "8005",
+    "redis survey host": "",
+    "redis survey port": "",
+    "redis cache host": "",
+    "redis cache port": "",
     "support email": "nobody@nosupport.com",
     "google analytics ua": "",
     "google analytics domain": "www.example.org",
