--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "q": "^1.0.1",
         "redis": "^0.10.1",
         "request": "^2.34.0",
+        "serve-favicon": "^2.0.1",
         "xml2js": "^0.4.2"
     },
     "devDependencies": {
