--- a/config.json
+++ b/config.json
@@ -4,10 +4,6 @@
     "openrosa server url": "ona.io",
     "enketo api key": "enketorules!",
     "port": "8005",
-    "redis survey host": "",
-    "redis survey port": "",
-    "redis cache host": "",
-    "redis cache port": "",
     "support email": "nobody@nosupport.com",
     "google analytics ua": "",
     "google analytics domain": "www.example.org",
@@ -30,5 +26,15 @@
     "tile": {
         "source": "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
         "attribution": "Map data © <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors"
+    },
+    "redis": {
+        "main": {
+            "host": "127.0.0.1",
+            "port": "6379"
+        },
+        "cache": {
+            "host": "127.0.0.1",
+            "port": "6380"
+        }
     }
 }
