secured redis, and built in support for secure external redis service option, closes #33

--- a/config.json
+++ b/config.json
@@ -30,11 +30,13 @@
     "redis": {
         "main": {
             "host": "127.0.0.1",
-            "port": "6379"
+            "port": "6379",
+            "password": null
         },
         "cache": {
             "host": "127.0.0.1",
-            "port": "6380"
+            "port": "6380",
+            "password": null
         }
     }
 }
