--- a/config.json
+++ b/config.json
@@ -14,6 +14,10 @@
         },
         "api key": ""
     },
+    "maps": [ {
+        "tiles": [ "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png" ],
+        "attribution": "Map data © <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors"
+    } ],
     "widgets": [
         "enketo-widget/note/notewidget",
         "enketo-widget/select-desktop/selectpicker",
@@ -29,10 +33,6 @@
         "enketo-widget/distress/distresspicker",
         "../../../widget/file-online/online-filepicker"
     ],
-    "tile": {
-        "source": "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-        "attribution": "Map data © <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors"
-    },
     "redis": {
         "main": {
             "host": "127.0.0.1",
