--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,11 @@
 {
     "app name": "Enketo Smart Paper for KoBoCAT",
-    "openrosa server name": "KoBoCAT",
-    "openrosa server url": "ona.io",
-    "enketo api key": "enketorules",
     "port": "8005",
+    "linked form and data server": {
+        "name": "KoBoCAT",
+        "server url": "ona.io",
+        "api key": "enketorules"
+    },
     "support": {
         "email": "info@kobotoolbox.org"
     },
