--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "grunt-contrib-requirejs": "^0.4.4",
         "grunt-contrib-symlink": "^0.3.0",
         "grunt-contrib-watch": "^0.6.1",
+        "grunt-env": "^0.4.1",
         "grunt-jsbeautifier": "^0.2.7",
         "grunt-mocha-test": "^0.10.2",
         "grunt-nodemon": "^0.2.1",
