--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
     "app name": "Enketo Smart Paper for KoBoCAT",
     "port": "8005",
+    "account manager api key": "ocrocks",
     "linked form and data server": {
         "name": "KoBoCAT",
         "server url": "ona.io",
