some cleanup some reorganization pass query param to submission, closes #1

--- a/config/config.json
+++ b/config/config.json
@@ -36,6 +36,7 @@
         "enketo-widget/distress/distresspicker",
         "../../../widget/file-online/online-filepicker"
     ],
+    "query parameter to pass to submission": "ecid",
     "redis": {
         "main": {
             "host": "127.0.0.1",
