--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ language: node_js
 node_js:
   - "0.10"
 before_script:
-  - npm install -g grunt-cli
+  - npm install -g grunt-cli bower
+  - bower install
   - chmod 777 ./setup/redis/travis-redis.sh
   - ./setup/redis/travis-redis.sh
 services:
