--- a/config/config.json
+++ b/config/config.json
@@ -33,7 +33,7 @@
         "enketo-widget/mediagrid/mediagridpicker",
         "enketo-widget/select-likert/likertitem",
         "enketo-widget/distress/distresspicker",
-        "../../../widget/file-online/online-filepicker",
+        "enketo-widget/file/filepicker",
         "enketo-widget/trigger/triggerwidget"
     ],
     "query parameter to pass to submission": "",
@@ -45,7 +45,7 @@
         },
         "cache": {
             "host": "127.0.0.1",
-            "port": "6380",
+            "port": "6379",
             "password": null
         }
     }
