--- a/package.json
+++ b/package.json
@@ -16,37 +16,37 @@
         "test": "grunt test"
     },
     "dependencies": {
-        "body-parser": "~1.0.0",
-        "debug": "~0.7.4",
-        "express": "~4.9.x",
-        "jade": "~1.3.0",
-        "libxmljs": "^0.9.0",
-        "morgan": "~1.0.0",
-        "node_xslt": "^0.1.9",
-        "q": "^1.0.1",
-        "redis": "^0.10.1",
-        "request": "^2.34.0",
-        "serve-favicon": "^2.0.1",
-        "xml2js": "^0.4.2"
+        "body-parser": "1.9.x",
+        "debug": "2.0.x",
+        "express": "4.9.x",
+        "jade": "1.7.x",
+        "libxmljs": "0.12.x",
+        "morgan": "1.3.x",
+        "node_xslt": "0.1.x",
+        "q": "2.0.x",
+        "redis": "0.12.x",
+        "request": "2.44.x",
+        "serve-favicon": "2.1.x",
+        "xml2js": "0.4.x"
     },
     "devDependencies": {
         "chai": "*",
         "chai-as-promised": "*",
-        "grunt": "^0.4.4",
-        "grunt-concurrent": "^0.5.0",
-        "grunt-contrib-jshint": "^0.10.0",
-        "grunt-contrib-requirejs": "^0.4.4",
-        "grunt-contrib-symlink": "^0.3.0",
-        "grunt-contrib-watch": "^0.6.1",
-        "grunt-env": "^0.4.1",
+        "grunt": "0.4.x",
+        "grunt-concurrent": "1.0.x",
+        "grunt-contrib-jshint": "0.10.x",
+        "grunt-contrib-requirejs": "0.4.x",
+        "grunt-contrib-symlink": "0.3.x",
+        "grunt-contrib-watch": "0.6.x",
+        "grunt-env": "0.4.x",
         "grunt-jsbeautifier": "^0.2.7",
-        "grunt-mocha-test": "^0.10.2",
-        "grunt-nodemon": "^0.2.1",
-        "grunt-sass": "^0.12.1",
-        "load-grunt-tasks": "^0.4.0",
+        "grunt-mocha-test": "0.12.x",
+        "grunt-nodemon": "0.3.x",
+        "grunt-sass": "0.14.x",
+        "load-grunt-tasks": "0.6.x",
         "mocha": "*",
-        "rjs-build-analysis": "0.0.3",
-        "supertest": "^0.13.0",
-        "time-grunt": "^0.4.0"
+        "rjs-build-analysis": "0.0.x",
+        "supertest": "0.14.x",
+        "time-grunt": "1.0.x"
     }
 }
