--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/lib/enketo-transformer/enketo-xslt"]
 	path = app/lib/enketo-transformer/enketo-xslt
 	url = https://github.com/enketo/enketo-xslt.git
+[submodule "app/lib/foundation"]
+	path = app/lib/foundation
+	url = https://github.com/zurb/bower-foundation.git
