--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
         "test": "grunt test"
     },
     "dependencies": {
-        "body-parser": "1.9.x",
-        "compression": "1.1.x",
-        "debug": "2.1.x",
-        "express": "4.9.x",
+        "body-parser": "1.x.x",
+        "compression": "1.x.x",
+        "debug": "2.x.x",
+        "express": "4.x.x",
         "jade": "1.7.x",
         "libxmljs": "0.12.x",
-        "morgan": "1.3.x",
+        "morgan": "1.x.x",
         "node_xslt": "0.1.x",
         "q": "2.0.x",
         "redis": "0.12.x",
-        "request": "2.45.x",
-        "serve-favicon": "2.1.x",
+        "request": "2.x.x",
+        "serve-favicon": "2.x.x",
         "xml2js": "0.4.x"
     },
     "devDependencies": {
@@ -43,7 +43,7 @@
         "grunt-jsbeautifier": "^0.2.7",
         "grunt-mocha-test": "0.12.x",
         "grunt-nodemon": "0.3.x",
-        "grunt-sass": "0.16.x",
+        "grunt-sass": "0.x.x",
         "load-grunt-tasks": "0.6.x",
         "mocha": "*",
         "rjs-build-analysis": "0.0.x",
