temporary workaround for issue with foundation modal dialogs, https://github.com/kobotoolbox/enketo-express/issues/98

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "app/lib/enketo-transformer/enketo-xslt"]
 	path = app/lib/enketo-transformer/enketo-xslt
 	url = https://github.com/enketo/enketo-xslt.git
-[submodule "app/lib/foundation"]
-	path = app/lib/foundation
-	url = https://github.com/zurb/bower-foundation.git
+[submodule "app/lib/martijnr-foundation"]
+	path = app/lib/martijnr-foundation
+	url = https://github.com/MartijnR/foundation.git
