--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules
 public/js/*.min.js
 public/css/*.css
 public/lib/enketo-core
-public/lib/foundation
+public/lib/martijnr-foundation
 public/lib/bower-components
 .rebooted
 .vagrant
