--- a/config/config.json
+++ b/config/config.json
@@ -3,8 +3,12 @@
     "port": "8005",
     "linked form and data server": {
         "name": "KoBoCAT",
-        "server url": "ona.io",
-        "api key": "enketorules"
+        "server url": "kf.kobotoolbox.org",
+        "api key": "enketorules",
+        "authentication": {
+            "managed by enketo": true,
+            "external login url that sets cookie": "http://example.com/login?return={RETURNURL}"
+        }
     },
     "support": {
         "email": "info@kobotoolbox.org"
