feature: multiple theme support, closes https://github.com/enketo/enketo-express/issues/9

--- a/config/config.json
+++ b/config/config.json
@@ -10,6 +10,7 @@
             "external login url that sets cookie": "http://example.com/login?return={RETURNURL}"
         }
     },
+    "default theme": "kobo",
     "support": {
         "email": "info@kobotoolbox.org"
     },
