--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "compression": "1.x.x",
         "debug": "2.x.x",
         "express": "4.x.x",
+        "i18next": "1.7.x",
         "jade": "1.x.x",
         "libxmljs": "0.12.x",
         "morgan": "1.x.x",
@@ -44,6 +45,9 @@
         "grunt-mocha-test": "0.12.x",
         "grunt-nodemon": "0.3.x",
         "grunt-sass": "0.x.x",
+        "grunt-shell": "1.1.x",
+        "gulp": "3.8.x",
+        "i18next-parser": "0.3.x",
         "load-grunt-tasks": "1.x.x",
         "mocha": "*",
         "rjs-build-analysis": "0.0.x",
