maintenance: swap basic-auth library with npm module, closes https://github.com/kobotoolbox/enketo-express/issues/133

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "test": "grunt test"
     },
     "dependencies": {
+        "basic-auth": "1.0.x",
         "body-parser": "1.x.x",
         "compression": "1.x.x",
         "debug": "2.x.x",
