--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
         "basic-auth": "1.0.x",
         "body-parser": "1.x.x",
         "compression": "1.x.x",
+        "cookie-parser": "^1.3.3",
+        "csurf": "^1.6.6",
         "debug": "2.x.x",
         "express": "4.x.x",
         "i18next": "1.7.x",
         "jade": "1.x.x",
+        "jwt-simple": "^0.2.0",
         "libxmljs": "0.13.x",
         "morgan": "1.x.x",
         "node_xslt": "0.1.x",
         "q": "2.0.x",
         "redis": "0.12.x",
-        "request": "2.x.x",
+        "request": "2.53.0",
         "serve-favicon": "2.x.x",
         "xml2js": "0.4.x"
     },
