--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
         "q": "1.0.1",
         "jquery": "~2.1.3",
         "requirejs": "~2.1.15",
-        "i18next": "~1.7.7"
+        "i18next": "~1.7.7",
+        "vex": "~2.3.2"
     }
 }
