--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,18 @@
 {
-    "app name": "Enketo Smart Paper for KoBoCAT",
+    "app name": "Enketo Smart Paper for Ona",
     "port": "8005",
     "linked form and data server": {
-        "name": "KoBoCAT",
-        "server url": "kf.kobotoolbox.org",
-        "api key": "enketorules",
+        "name": "Ona",
+        "server url": "https://stage.ona.io",
+        "api key": "0nad1srupts",
         "authentication": {
-            "managed by enketo": true,
-            "external login url that sets cookie": "http://example.com/login?return={RETURNURL}"
+            "managed by enketo": false,
+            "external login url that sets cookie": "https://zebra.ona.io/login/?return={RETURNURL}"
         }
     },
-    "default theme": "kobo",
+    "default theme": "formhub",
     "support": {
-        "email": "info@kobotoolbox.org"
+        "email": "support@ona.io"
     },
     "google": {
         "analytics": {
@@ -50,7 +50,7 @@
         },
         "cache": {
             "host": "127.0.0.1",
-            "port": "6380",
+            "port": "6379",
             "password": null
         }
     },
