--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "jade": "1.x.x",
         "jwt-simple": "^0.2.0",
         "libxmljs": "0.13.x",
+        "lodash": "3.3.x",
         "morgan": "1.x.x",
         "node_xslt": "0.1.x",
         "q": "2.0.x",
