--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
 before_script:
   - npm install -g grunt-cli bower
   - bower install
+  - cp ./config/default-config.json ./config/config.json
   - chmod 777 ./setup/redis/travis-redis.sh
   - ./setup/redis/travis-redis.sh
 services:
