--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - cp ./config/default-config.json ./config/config.json
   - chmod 777 ./setup/redis/travis-redis.sh
   - ./setup/redis/travis-redis.sh
+  - grunt sass
 services:
   - redis-server
 notifications:
