--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cookie-parser": "^1.3.3",
         "csurf": "^1.6.6",
         "debug": "2.x.x",
+        "enketo-transformer": "1.0.x",
         "express": "4.x.x",
         "i18next": "1.7.x",
         "jade": "1.x.x",
