--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "A simplified version of Enketo Smart Paper that requires a constant connection to the server.",
     "homepage": "",
-    "version": "1.8.3",
+    "version": "1.8.4",
     "main": "./app.js",
     "repository": {
         "type": "git",
@@ -26,7 +26,7 @@
         "express": "4.x.x",
         "i18next": "1.7.x",
         "jade": "1.x.x",
-        "jwt-simple": "^0.2.0",
+        "jwt-simple": "0.3.x",
         "libxmljs": "0.13.x",
         "lodash": "3.3.x",
         "morgan": "1.x.x",
@@ -38,19 +38,19 @@
         "xml2js": "0.4.x"
     },
     "devDependencies": {
-        "chai": "1.10.x",
+        "chai": "2.2.x",
         "chai-as-promised": "*",
         "grunt": "0.4.x",
         "grunt-concurrent": "1.0.x",
-        "grunt-contrib-jshint": "0.10.x",
+        "grunt-contrib-jshint": "0.11.x",
         "grunt-contrib-requirejs": "0.4.x",
         "grunt-contrib-symlink": "0.3.x",
         "grunt-contrib-watch": "0.6.x",
         "grunt-env": "0.4.x",
         "grunt-jsbeautifier": "0.2.x",
-        "grunt-karma": "0.9.x",
+        "grunt-karma": "0.10.x",
         "grunt-mocha-test": "0.12.x",
-        "grunt-nodemon": "0.3.x",
+        "grunt-nodemon": "0.4.x",
         "grunt-sass": "0.x.x",
         "grunt-shell": "1.1.x",
         "gulp": "3.8.x",
@@ -63,12 +63,12 @@
         "karma-phantomjs-launcher": "0.1.x",
         "karma-requirejs": "0.2.x",
         "karma-safari-launcher": "0.1.x",
-        "karma-sinon-chai": "^0.2.0",
-        "load-grunt-tasks": "1.x.x",
+        "karma-sinon-chai": "0.2.x",
+        "load-grunt-tasks": "3.x.x",
         "mocha": "*",
         "requirejs": "2.1.x",
         "rjs-build-analysis": "0.0.x",
         "supertest": "0.x.x",
-        "time-grunt": "1.0.x"
+        "time-grunt": "1.x.x"
     }
 }
