--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,6 @@
         "requirejs": "~2.1.15",
         "i18next": "~1.7.7",
         "vex": "~2.3.2",
-        "papaparse": "~4.1.0"
+        "papaparse": "4.0.7"
     }
 }
