--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "A simplified version of Enketo Smart Paper that requires a constant connection to the server.",
     "homepage": "",
-    "version": "1.8.9",
+    "version": "1.9.0",
     "main": "./app.js",
     "repository": {
         "type": "git",
@@ -48,10 +48,10 @@
         "grunt-contrib-watch": "0.6.x",
         "grunt-env": "0.4.x",
         "grunt-jsbeautifier": "0.2.x",
-        "grunt-karma": "0.10.x",
+        "grunt-karma": "0.11.x",
         "grunt-mocha-test": "0.12.x",
         "grunt-nodemon": "0.4.x",
-        "grunt-sass": "0.x.x",
+        "grunt-sass": "1.0.x",
         "grunt-shell": "1.1.x",
         "gulp": "3.8.x",
         "i18next-parser": "0.3.x",
@@ -63,12 +63,12 @@
         "karma-phantomjs-launcher": "0.1.x",
         "karma-requirejs": "0.2.x",
         "karma-safari-launcher": "0.1.x",
-        "karma-sinon-chai": "0.2.x",
+        "karma-sinon-chai": "0.3.x",
         "load-grunt-tasks": "3.x.x",
         "mocha": "*",
         "requirejs": "2.1.x",
         "rjs-build-analysis": "0.0.x",
-        "supertest": "0.x.x",
+        "supertest": "1.0.x",
         "time-grunt": "1.x.x"
     }
 }
