--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
         "i18next": "~1.7.7",
         "vex": "~2.3.2",
         "leaflet": "~0.7.3",
-        "papaparse": "https://github.com/MartijnR/PapaParse.git#~4.1.2"
+        "papaparse": "https://github.com/MartijnR/PapaParse.git#~4.1.2",
+        "mergexml": "~1.1.0"
     }
 }
