fixed: regression with formhub authentication, closes https://github.com/kobotoolbox/enketo-express/issues/238

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -6,6 +6,7 @@
         "name": "KoBoCAT",
         "server url": "kf.kobotoolbox.org",
         "api key": "enketorules",
+        "legacy formhub": false,
         "authentication": {
             "managed by enketo": true,
             "allow insecure transport": false,
