changed: updated dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "A simplified version of Enketo Smart Paper that requires a constant connection to the server.",
     "homepage": "",
-    "version": "1.12.2",
+    "version": "1.13.0",
     "main": "./app.js",
     "repository": {
         "type": "git",
@@ -30,15 +30,14 @@
         "libxmljs": "0.14.x",
         "lodash": "3.10.x",
         "morgan": "1.x.x",
-        "node_xslt": "0.1.x",
         "q": "2.0.x",
         "redis": "0.12.x",
-        "request": "2.58.x",
+        "request": "2.60.x",
         "serve-favicon": "2.x.x",
         "xml2js": "0.4.x"
     },
     "devDependencies": {
-        "chai": "3.0.x",
+        "chai": "3.2.x",
         "chai-as-promised": "*",
         "grunt": "0.4.x",
         "grunt-concurrent": "2.x.x",
@@ -48,14 +47,14 @@
         "grunt-contrib-watch": "0.6.x",
         "grunt-env": "0.4.x",
         "grunt-jsbeautifier": "0.2.x",
-        "grunt-karma": "0.11.x",
+        "grunt-karma": "0.12.x",
         "grunt-mocha-test": "0.12.x",
         "grunt-nodemon": "0.4.x",
         "grunt-sass": "1.0.x",
         "grunt-shell": "1.1.x",
         "gulp": "3.9.x",
         "i18next-parser": "0.3.x",
-        "karma": "0.12.x",
+        "karma": "0.13.x",
         "karma-chrome-launcher": "0.2.x",
         "karma-firefox-launcher": "0.1.x",
         "karma-mocha": "0.2.x",
@@ -63,9 +62,9 @@
         "karma-phantomjs-launcher": "0.2.x",
         "karma-requirejs": "0.2.x",
         "karma-safari-launcher": "0.1.x",
-        "karma-sinon-chai": "0.2.x",
+        "karma-sinon-chai": "1.0.x",
         "load-grunt-tasks": "3.x.x",
-        "mocha": "*",
+        "mocha": "2.2.x",
         "requirejs": "2.1.x",
         "rjs-build-analysis": "0.0.x",
         "supertest": "1.0.x",
