--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
         "i18next": "~1.10.2",
         "vex": "~2.3.2",
         "leaflet": "~0.7.3",
-        "papaparse": "https://github.com/MartijnR/PapaParse.git#~4.1.2",
+        "papaparse": "~4.1.2",
         "mergexml": "~1.1.0",
         "db.js": "~0.10.2"
     }
