changed: switched to CommonJS, fixed HTML title, closes https://github.com/kobotoolbox/enketo-express/issues/294, closes https://github.com/kobotoolbox/enketo-express/issues/299

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.sublime-workspace
 node_modules
 public/js/*.min.js
+public/js/*-bundle.js
 public/css/*.css
 public/lib/enketo-core
 public/lib/bower-components
@@ -10,4 +11,4 @@ config/config.json
 .rebooted
 .vagrant
 .scratchpad
-
+.nodemon-*
