--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "A simplified version of Enketo Smart Paper that requires a constant connection to the server.",
     "homepage": "",
-    "version": "1.14.4",
+    "version": "1.15.0",
     "main": "./app.js",
     "repository": {
         "type": "git",
@@ -15,35 +15,43 @@
         "start": "node .",
         "test": "grunt test"
     },
+    "license": "Apache-2.0",
     "dependencies": {
         "basic-auth": "1.0.x",
         "body-parser": "1.x.x",
         "compression": "1.x.x",
-        "cookie-parser": "^1.3.3",
-        "csurf": "^1.6.6",
+        "cookie-parser": "1.3.x",
+        "csurf": "1.6.x",
+        "db.js": "0.10.x",
         "debug": "2.x.x",
+        "enketo-core": "4.0.x",
         "enketo-transformer": "1.4.x",
         "express": "4.x.x",
         "i18next": "1.10.x",
+        "i18next-client": "1.10.x",
         "jade": "1.x.x",
+        "jquery": "2.1.x",
         "jwt-simple": "0.3.x",
         "libxmljs": "0.14.x",
         "lodash": "3.10.x",
         "morgan": "1.x.x",
+        "papaparse": "4.1.x",
         "q": "2.0.x",
         "redis": "0.12.x",
         "request": "2.60.x",
         "serve-favicon": "2.x.x",
+        "vex-js": "2.3.x",
         "xml2js": "0.4.x"
     },
     "devDependencies": {
+        "aliasify": "1.7.x",
         "chai": "3.2.x",
         "chai-as-promised": "*",
         "grunt": "0.4.x",
+        "grunt-browserify": "4.0.x",
         "grunt-concurrent": "2.x.x",
         "grunt-contrib-jshint": "0.11.x",
-        "grunt-contrib-requirejs": "0.4.x",
-        "grunt-contrib-symlink": "0.3.x",
+        "grunt-contrib-uglify": "0.9.x",
         "grunt-contrib-watch": "0.6.x",
         "grunt-env": "0.4.x",
         "grunt-jsbeautifier": "0.2.x",
@@ -55,20 +63,25 @@
         "gulp": "3.9.x",
         "i18next-parser": "0.3.x",
         "karma": "0.13.x",
+        "karma-browserify": "4.3.x",
         "karma-chrome-launcher": "0.2.x",
         "karma-firefox-launcher": "0.1.x",
         "karma-mocha": "0.2.x",
-        "karma-opera-launcher": "0.2.x",
+        "karma-opera-launcher": "0.3.x",
         "karma-phantomjs-launcher": "0.2.x",
-        "karma-requirejs": "0.2.x",
         "karma-safari-launcher": "0.1.x",
         "karma-sinon-chai": "0.2.x",
         "load-grunt-tasks": "3.x.x",
         "mocha": "2.2.x",
         "phantomjs": "1.9.x",
-        "requirejs": "2.1.x",
-        "rjs-build-analysis": "0.0.x",
         "supertest": "1.0.x",
         "time-grunt": "1.x.x"
+    },
+    "aliasify": {
+        "aliases": {
+            "text!enketo-config": "./public/temp-client-config.json",
+            "enketo-config": "./public/temp-client-config.json",
+            "widgets": "./public/js/src/module/widgets"
+        }
     }
 }
