--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
-before_install:
-  - git submodule update --init --recursive
-  - sudo apt-get install libxml2-dev libxslt1-dev
 language: node_js
+sudo: false
 node_js:
   - "0.10"
 before_script:
