--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "csurf": "1.8.x",
         "db.js": "0.10.x",
         "debug": "2.x.x",
-        "enketo-core": "4.1.0",
-        "enketo-transformer": "1.4.x",
+        "enketo-core": "4.1.1",
+        "enketo-transformer": "1.5.0",
         "express": "4.x.x",
         "i18next": "1.10.x",
         "i18next-client": "1.10.x",
