fixed: file-manager.js in enketo-core not properly overridden with the enketo-express version, closes https://github.com/kobotoolbox/enketo-express/issues/330

--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
         "aliases": {
             "text!enketo-config": "./public/temp-client-config.json",
             "enketo-config": "./public/temp-client-config.json",
-            "widgets": "./public/js/src/module/widgets"
+            "widgets": "./public/js/src/module/widgets",
+            "../../js/file-manager": "./public/js/src/module/file-manager"
         }
     }
 }
