changed: coding style consistency, changed: Q to lie, changed: deferred usage replaced with native usage changed: cleaned up unused code https://github.com/kobotoolbox/enketo-express/issues/237

--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
         "jquery": "2.1.x",
         "jwt-simple": "0.3.x",
         "libxmljs": "0.14.x",
+        "lie": "3.0.x",
         "lodash": "3.10.x",
         "morgan": "1.x.x",
         "papaparse": "4.1.x",
-        "q": "2.0.x",
         "redis": "1.0.x",
         "request": "2.61.x",
         "serve-favicon": "2.x.x",
