fixed: node 0.12 incompatiblity, closes https://github.com/kobotoolbox/enketo-express/issues/212

--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
         "db.js": "0.10.x",
         "debug": "2.x.x",
         "enketo-core": "4.4.2",
-        "enketo-transformer": "1.6.3",
+        "enketo-transformer": "1.6.4",
         "express": "4.x.x",
         "i18next": "1.10.x",
         "i18next-client": "1.11.x",
         "jade": "1.x.x",
         "jquery": "2.1.x",
         "jwt-simple": "0.3.x",
-        "libxmljs": "0.15.x",
+        "libxslt": "0.5.4",
         "lie": "3.0.x",
         "lodash": "3.10.x",
         "morgan": "1.x.x",
