added: successful 201 submission instanceID logging, closes https://github.com/kobotoolbox/enketo-express/issues/357

--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "dependencies": {
         "basic-auth": "1.0.x",
         "body-parser": "1.x.x",
+        "bristol": "0.3.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
         "csurf": "1.8.x",
         "db.js": "0.10.x",
         "debug": "2.x.x",
-        "enketo-core": "4.4.2",
+        "enketo-core": "4.4.3",
         "enketo-transformer": "1.6.4",
         "express": "4.x.x",
         "i18next": "1.10.x",
