--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ sudo: true
 node_js:
   - "0.10"
   - "0.12"
+  - "4"
+dist: trusty
 before_script:
   - npm install -g grunt-cli
   - cp ./config/default-config.json ./config/config.json
