added: record export functionality, closes https://github.com/kobotoolbox/enketo-express/issues/150

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     },
     "license": "Apache-2.0",
     "dependencies": {
+        "aliasify": "1.8.x",
         "basic-auth": "1.0.x",
         "body-parser": "1.x.x",
         "bristol": "0.3.x",
+        "busboy": "0.2.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
         "csurf": "1.8.x",
@@ -28,29 +30,29 @@
         "enketo-core": "4.4.4",
         "enketo-transformer": "1.6.5",
         "express": "4.x.x",
+        "grunt": "0.4.x",
+        "grunt-browserify": "4.0.x",
+        "grunt-contrib-uglify": "0.11.x",
+        "grunt-env": "0.4.x",
+        "grunt-sass": "1.1.x",
         "i18next": "1.10.x",
         "i18next-client": "1.11.x",
         "jade": "1.x.x",
         "jquery": "2.1.x",
+        "jszip": "2.5.x",
         "jwt-simple": "0.4.x",
         "libxslt": "0.6.0",
         "lie": "3.0.x",
+        "load-grunt-tasks": "3.x.x",
         "lodash": "3.10.x",
         "morgan": "1.x.x",
         "papaparse": "4.1.x",
         "redis": "2.4.x",
         "request": "2.67.x",
         "serve-favicon": "2.x.x",
+        "time-grunt": "1.x.x",
         "vex-js": "2.3.x",
-        "xml2js": "0.4.x",
-        "grunt": "0.4.x",
-        "grunt-browserify": "4.0.x",
-        "aliasify": "1.8.x",
-        "grunt-contrib-uglify": "0.11.x",
-        "grunt-sass": "1.1.x",
-        "grunt-env": "0.4.x",
-        "load-grunt-tasks": "3.x.x",
-        "time-grunt": "1.x.x"
+        "xml2js": "0.4.x"
     },
     "devDependencies": {
         "chai": "3.4.x",
