--- a/config/default-config.json
+++ b/config/default-config.json
@@ -15,6 +15,7 @@
     },
     "encryption key": "s0m3v3rys3cr3tk3y",
     "default theme": "kobo",
+    "base path": "",
     "log": {
         "submissions": false
     },
