--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
         "type": "git",
         "url": "https://github.com/kobotoolbox/enketo-express"
     },
-    "contributors": [
-        "Martijn van de Rijdt"
-    ],
+    "author": {
+        "name": "Martijn van de Rijdt",
+        "email": "martijn@enketo.org",
+        "url": "https://www.linkedin.com/in/martijnvanderijdt"
+    },
+    "contributors": [],
     "scripts": {
         "start": "node .",
         "test": "grunt test"
@@ -28,7 +31,7 @@
         "db.js": "0.10.x",
         "debug": "2.x.x",
         "enketo-core": "4.5.7",
-        "enketo-transformer": "1.7.4",
+        "enketo-transformer": "1.7.5",
         "express": "4.x.x",
         "grunt": "0.4.x",
         "grunt-browserify": "4.0.x",
