--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
         "grunt-contrib-uglify": "0.11.x",
         "grunt-env": "0.4.x",
         "grunt-sass": "1.1.x",
-        "i18next": "1.10.x",
-        "i18next-client": "1.11.x",
+        "i18next": "2.1.x",
+        "i18next-browser-languagedetector": "0.0.14",
+        "i18next-express-middleware": "0.2.0",
+        "i18next-node-fs-backend": "0.0.6",
+        "i18next-xhr-backend": "0.3.0",
         "jade": "1.x.x",
         "jquery": "2.1.x",
         "jszip": "2.5.x",
@@ -66,7 +69,7 @@
         "grunt-nodemon": "0.4.x",
         "grunt-shell": "1.1.x",
         "gulp": "3.9.x",
-        "i18next-parser": "0.3.x",
+        "i18next-parser": "0.7.x",
         "karma": "0.13.x",
         "karma-browserify": "5.0.x",
         "karma-chrome-launcher": "0.2.x",
