--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "enketo-express",
-    "description": "A simplified version of Enketo Smart Paper that requires a constant connection to the server.",
+    "description": "Webforms evolved.",
     "homepage": "",
     "version": "1.23.2",
     "main": "./app.js",
