fixed: form UI strings now also translatable including the default 'this is required message', closes https://github.com/kobotoolbox/enketo-express/issues/142

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
             "text!enketo-config": "./public/temp-client-config.json",
             "enketo-config": "./public/temp-client-config.json",
             "widgets": "./public/js/src/module/widgets",
+            "translator": "./public/js/src/module/translator",
             "../../js/file-manager": "./public/js/src/module/file-manager"
         }
     }
