--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
         "grunt-contrib-uglify": "1.0.x",
         "grunt-env": "0.4.x",
         "grunt-sass": "1.1.x",
-        "i18next": "2.2.x",
-        "i18next-browser-languagedetector": "0.1.0",
+        "i18next": "2.3.3",
+        "i18next-browser-languagedetector": "0.2.1",
         "i18next-express-middleware": "0.3.2",
         "i18next-node-fs-backend": "0.0.6",
-        "i18next-xhr-backend": "0.4.0",
+        "i18next-xhr-backend": "0.5.2",
         "jade": "1.x.x",
         "jquery": "2.1.x",
         "jszip": "2.5.x",
