--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "enketo-express",
     "description": "Webforms evolved.",
-    "homepage": "",
-    "version": "1.26.0",
+    "homepage": "https://enketo.org",
+    "version": "1.26.1",
     "main": "./app.js",
     "repository": {
         "type": "git",
