added: piwik analytics support, closes https://github.com/kobotoolbox/enketo-express/issues/475

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -22,12 +22,19 @@
     "support": {
         "email": "info@kobotoolbox.org"
     },
+    "analytics": "google",
     "google": {
         "analytics": {
             "ua": "",
             "domain": ""
         },
         "api key": ""
+    },
+    "piwik": {
+        "analytics": {
+            "tracker url": "",
+            "site id": ""
+        }
     },
     "maps": [ {
         "name": "streets",
