--- a/config/default-config.json
+++ b/config/default-config.json
@@ -1,7 +1,7 @@
 {
     "app name": "Enketo Smart Paper for KoBoCAT",
     "port": "8005",
-    "offline enabled": false,
+    "offline enabled": true,
     "linked form and data server": {
         "name": "KoBoCAT",
         "server url": "kf.kobotoolbox.org",
