--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "grunt-browserify": "4.0.x",
         "grunt-contrib-uglify": "1.0.x",
         "grunt-env": "0.4.x",
-        "grunt-sass": "1.1.x",
+        "grunt-sass": "https://github.com/liamkeaton/grunt-sass.git#365ab105bb05e850b89da411fc42ad850ecfdcbf",
         "i18next": "2.3.3",
         "i18next-browser-languagedetector": "0.2.1",
         "i18next-express-middleware": "0.3.2",
