changed: minor styling improvements for comment widget

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "csurf": "1.8.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
-        "enketo-core": "4.7.7",
+        "enketo-core": "git://github.com/enketo/enketo-core.git#a67ddce7eb25390d18175cd7cea7a31988903c1f",
         "enketo-transformer": "1.8.0",
         "express": "4.x.x",
         "grunt": "1.0.x",
