--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "libxslt": "0.6.3",
         "lie": "3.0.x",
         "load-grunt-tasks": "3.x.x",
-        "lodash": "4.12.x",
+        "lodash": "4.13.x",
         "morgan": "1.x.x",
         "papaparse": "4.1.x",
         "redis": "2.5.x",
@@ -72,7 +72,7 @@
         "grunt-nodemon": "0.4.x",
         "grunt-shell": "1.3.x",
         "gulp": "3.9.x",
-        "i18next-parser": "0.7.x",
+        "i18next-parser": "0.8.x",
         "karma": "0.13.x",
         "karma-browserify": "5.0.x",
         "karma-chrome-launcher": "1.0.x",
@@ -82,7 +82,7 @@
         "karma-phantomjs-launcher": "1.0.x",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.2.x",
-        "mocha": "2.4.x",
+        "mocha": "2.5.2",
         "phantomjs": "2.1.x",
         "supertest": "1.2.x"
     },
