--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.30.1",
+    "version": "1.31.0",
     "main": "./app.js",
+    "engines": {
+        "node": "4.4.x",
+        "npm": "2.14.x"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/kobotoolbox/enketo-express"
@@ -16,7 +20,8 @@
     "contributors": [],
     "scripts": {
         "start": "node .",
-        "test": "grunt test"
+        "test": "grunt test",
+        "postinstall": "grunt"
     },
     "license": "Apache-2.0",
     "dependencies": {
