fixes: npm update issue with grunt-i18next,
closes https://github.com/kobotoolbox/enketo-express/issues/532

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.32.0",
+    "version": "1.32.1",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -65,7 +65,7 @@
         "time-grunt": "1.x.x",
         "vex-js": "2.3.x",
         "xml2js": "0.4.x",
-        "grunt-18next": "https://github.com/enketo/grunt-i18next.git#1784b3d"
+        "grunt-i18next": "0.1.x"
     },
     "devDependencies": {
         "chai": "3.5.x",
