--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.32.1",
+    "version": "1.32.2",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -40,7 +40,7 @@
         "express": "4.x.x",
         "grunt": "1.0.x",
         "grunt-browserify": "5.0.x",
-        "grunt-contrib-uglify": "1.0.x",
+        "grunt-contrib-uglify": "2.0.x",
         "grunt-env": "0.4.x",
         "grunt-sass": "https://github.com/liamkeaton/grunt-sass.git#365ab105bb05e850b89da411fc42ad850ecfdcbf",
         "grunt-shell": "1.3.x",
@@ -54,13 +54,13 @@
         "jszip": "2.5.x",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.3",
-        "lie": "3.0.x",
+        "lie": "3.1.x",
         "load-grunt-tasks": "3.x.x",
-        "lodash": "4.13.x",
+        "lodash": "4.14.x",
         "morgan": "1.x.x",
         "papaparse": "4.1.x",
         "redis": "2.5.x",
-        "request": "2.72.x",
+        "request": "2.74.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
         "vex-js": "2.3.x",
@@ -79,11 +79,11 @@
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
         "i18next-parser": "0.7.x",
-        "karma": "0.13.x",
-        "karma-browserify": "5.0.x",
+        "karma": "1.1.2",
+        "karma-browserify": "5.1.x",
         "karma-chrome-launcher": "1.0.x",
         "karma-firefox-launcher": "1.0.x",
-        "karma-mocha": "1.0.x",
+        "karma-mocha": "1.1.x",
         "karma-opera-launcher": "1.0.x",
         "karma-phantomjs-launcher": "1.0.x",
         "karma-safari-launcher": "1.0.x",
