fixed: css not building with official grunt-sass

--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
-        "enketo-core": "4.9.1",
+        "enketo-core": "4.9.2",
         "enketo-transformer": "1.10.0",
         "express": "4.x.x",
         "grunt": "1.0.x",
         "grunt-browserify": "5.0.x",
         "grunt-contrib-uglify": "2.0.x",
         "grunt-env": "0.4.x",
-        "grunt-sass": "https://github.com/liamkeaton/grunt-sass.git#365ab105bb05e850b89da411fc42ad850ecfdcbf",
+        "grunt-sass": "1.2.x",
         "grunt-shell-spawn": "0.3.x",
         "i18next": "3.1.0",
         "i18next-browser-languagedetector": "0.3.0",
