--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
         "grunt-env": "0.4.x",
         "grunt-sass": "1.2.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "3.1.0",
-        "i18next-browser-languagedetector": "0.3.0",
-        "i18next-express-middleware": "1.0.1",
+        "i18next": "3.4.3",
+        "i18next-browser-languagedetector": "1.0.0",
+        "i18next-express-middleware": "1.0.2",
         "i18next-node-fs-backend": "0.1.2",
-        "i18next-xhr-backend": "0.5.4",
+        "i18next-xhr-backend": "1.2.0",
         "jade": "1.x.x",
         "jquery": "2.1.x",
         "jszip": "2.5.x",
@@ -56,11 +56,11 @@
         "libxslt": "0.6.3",
         "lie": "3.1.x",
         "load-grunt-tasks": "3.x.x",
-        "lodash": "4.14.x",
+        "lodash": "4.16.x",
         "morgan": "1.x.x",
         "papaparse": "4.1.x",
         "redis": "2.5.x",
-        "request": "2.74.x",
+        "request": "2.75.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
         "vex-js": "2.3.x",
@@ -75,24 +75,24 @@
         "grunt-contrib-watch": "1.0.x",
         "grunt-jsbeautifier": "0.2.x",
         "grunt-karma": "2.0.x",
-        "grunt-mocha-test": "0.12.x",
+        "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
-        "i18next-parser": "0.7.x",
-        "karma": "1.1.2",
+        "i18next-parser": "0.10.1",
+        "karma": "1.3.0",
         "karma-browserify": "5.1.x",
-        "karma-chrome-launcher": "1.0.x",
+        "karma-chrome-launcher": "2.0.x",
         "karma-firefox-launcher": "1.0.x",
-        "karma-mocha": "1.1.x",
+        "karma-mocha": "1.2.x",
         "karma-opera-launcher": "1.0.x",
         "karma-phantomjs-launcher": "1.0.x",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.2.x",
-        "mocha": "2.5.3",
+        "mocha": "3.1.x",
         "phantomjs": "2.1.x",
-        "sinon": "^1.17.4",
-        "sinon-chai": "^2.8.0",
-        "supertest": "1.2.x"
+        "sinon": "1.17.x",
+        "sinon-chai": "2.8.x",
+        "supertest": "2.0.x"
     },
     "aliasify": {
         "aliases": {
