--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
         "lodash": "4.16.x",
         "morgan": "1.x.x",
         "papaparse": "4.1.x",
-        "redis": "2.5.x",
+        "redis": "2.6.2",
         "request": "2.75.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
