--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
         "enketo-core": "4.9.3",
         "enketo-transformer": "1.10.0",
         "express": "4.x.x",
+        "file-saver": "1.3.x",
         "grunt": "1.0.x",
         "grunt-browserify": "5.0.x",
         "grunt-contrib-uglify": "2.0.x",
         "grunt-env": "0.4.x",
+        "grunt-i18next": "0.1.x",
         "grunt-sass": "1.2.x",
         "grunt-shell-spawn": "0.3.x",
         "i18next": "3.4.3",
@@ -51,7 +53,7 @@
         "i18next-xhr-backend": "1.2.0",
         "jade": "1.x.x",
         "jquery": "2.1.x",
-        "jszip": "2.5.x",
+        "jszip": "3.1.x",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.3",
         "lie": "3.1.x",
@@ -64,8 +66,7 @@
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
         "vex-js": "2.3.x",
-        "xml2js": "0.4.x",
-        "grunt-i18next": "0.1.x"
+        "xml2js": "0.4.x"
     },
     "devDependencies": {
         "chai": "3.5.x",
