added: prevent accidentally publishing this app on npm

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "test": "grunt test",
         "postinstall": "grunt"
     },
+    "private": true,
     "license": "Apache-2.0",
     "dependencies": {
         "aliasify": "2.0.x",
