--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
-        "enketo-core": "4.10.0",
+        "enketo-core": "https://github.com/enketo/enketo-core.git#6251991",
         "enketo-transformer": "1.10.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
