--- a/config/sample.env
+++ b/config/sample.env
@@ -1,22 +1,22 @@
 # Convert from structured config.json to flat environment variable as follows:
 #
-# 1. Uppercase everything: 
-# 	{ "var": "yes" } becomes: VAR=yes
+# 1. Uppercase everything and prepend ENKETO_: 
+# 	{ "var": "yes" } becomes: ENKETO_VAR=yes
 #
 # 2. Convert spaces to underscores:
-#	{ "my var": "yes" } becomes: MY_VAR=yes
+#	{ "my var": "yes" } becomes: ENKETO_MY_VAR=yes
 #
 # 3. convert property separators to underscores:
-#	{ "my object" : { "property":"yes" } } becomes: MY_OBJECT_PROPERTY=yes)
+#	{ "my object" : { "property":"yes" } } becomes: ENKETO_MY_OBJECT_PROPERTY=yes)
 #
 # 4. Boolean values are either true or false (same as string values "true" and "false").
 # 	{ "log": { "submissions": true } } becomes:
-#	 LOG_SUBMISSIONS=true
+#	 ENKETO_LOG_SUBMISSIONS=true
 #
 # 5. Arrays are treated the same as objects where the array index is the property.
 # { "themes supported": [ "grid", "kobo"] } becomes:
-# 	THEMES_SUPPORTED_0=grid
-#	THEMES_SUPPORTED_1=kobo
+# 	ENKETO_THEMES_SUPPORTED_0=grid
+#	ENKETO_THEMES_SUPPORTED_1=kobo
 #
 
 # ENKETO_APP_NAME=Enketo Smart Paper for KoBoCAT
@@ -32,6 +32,8 @@
 # ENKETO_LINKED_FORM_AND_DATA_SERVER_AUTHENTICATION_MANAGED_BY_ENKETO=true
 # ENKETO_LINKED_FORM_AND_DATA_SERVER_AUTHENTICATION_ALLOW_INSECURE_TRANSPORT=false
 # ENKETO_LINKED_FORM_AND_DATA_SERVER_AUTHENTICATION_EXTERNAL_LOGIN_URL_THAT_SETS_COOKIE=http://example.com/login?return={RETURNURL}
+
+# ENKETO_TIMEOUT=300000
 
 # ENKETO_ENCRYPTION_KEY=s0m3v3rys3cr3tk3y
 
@@ -78,3 +80,5 @@
 # ENKETO_LOGO_HREF=
 
 # ENKETO_DISABLE_SAVE_AS_DRAFT=false
+
+# ENKETO_REPEAT_ORDINALS=false
