--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.2.x",
         "mocha": "3.1.x",
+        "multer": "^1.2.0",
         "phantomjs": "2.1.x",
         "sinon": "1.17.x",
         "sinon-chai": "2.8.x",
