--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
         "grunt-i18next": "0.1.x",
         "grunt-sass": "1.2.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "3.4.4",
+        "i18next": "4.1.x",
         "i18next-browser-languagedetector": "1.0.1",
         "i18next-express-middleware": "1.0.2",
-        "i18next-node-fs-backend": "0.1.2",
-        "i18next-xhr-backend": "1.2.0",
+        "i18next-node-fs-backend": "0.1.3",
+        "i18next-xhr-backend": "1.2.1",
         "jade": "1.x.x",
         "jquery": "3.1.x",
         "jszip": "3.1.x",
