--- a/config/default-config.json
+++ b/config/default-config.json
@@ -23,7 +23,7 @@
         "submissions": false
     },
     "support": {
-        "email": "info@kobotoolbox.org"
+        "email": "support@kobotoolbox.org"
     },
     "analytics": "google",
     "google": {
