Don't automatically restart Docker Compose containers on reboot.

--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -12,7 +12,7 @@ nginx:
     - ./secrets/:/tmp/enketo_express_secrets/:ro
     - ../../config/:/srv/src/enketo_express/config/
   command: bash /tmp/enketo_express_nginx/nginx_command.bash
-  restart: always
+  restart: on-failure
 
 enketo_express:
   # image: kobotoolbox/enketo_express
@@ -25,7 +25,7 @@ enketo_express:
   volumes:
     - ../../config/:/srv/src/enketo_express/config
     - ./secrets/:/srv/src/enketo_express/setup/docker/secrets/
-  restart: always
+  restart: on-failure
 
 redis_main:
   image: redis:2.6
@@ -33,11 +33,11 @@ redis_main:
   volumes:
     - ../redis/conf/redis-enketo-main.conf:/etc/redis/redis.conf:ro
     - ./redis_main_data/:/data/
-  restart: always
+  restart: on-failure
 
 redis_cache:
   image: redis:2.6
   # Map our "cache" Redis config into the container.
   volumes:
     - ../redis/conf/redis-enketo-cache.conf:/etc/redis/redis.conf:ro
-  restart: always
+  restart: on-failure
