fixed: re-build fs logic around validation events instead dataupdate events
closes https://github.com/kobotoolbox/enketo-express/issues/633

--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
         "busboy": "0.2.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
+        "crypto-js": "3.1.x",
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
         "enketo-core": "4.21.0",
         "enketo-transformer": "1.13.0",
+        "enketo-xpathjs-oc": "https://github.com/openclinica/enketo-xpathjs-oc.git#c13aba4",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
@@ -52,7 +54,6 @@
         "i18next-express-middleware": "1.0.2",
         "i18next-node-fs-backend": "0.1.3",
         "i18next-xhr-backend": "1.3.0",
-        "pug": "2.0.0-beta6",
         "jquery": "3.1.x",
         "jszip": "3.1.x",
         "jwt-simple": "0.5.x",
@@ -62,13 +63,13 @@
         "lodash": "4.17.x",
         "morgan": "1.x.x",
         "papaparse": "4.1.x",
+        "pug": "2.0.0-beta6",
         "redis": "2.6.5",
         "request": "2.79.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
         "vex-js": "2.3.x",
-        "xml2js": "0.4.x",
-        "enketo-xpathjs-oc": "https://github.com/openclinica/enketo-xpathjs-oc.git#c13aba4"
+        "xml2js": "0.4.x"
     },
     "devDependencies": {
         "chai": "3.5.x",
