added: ability to disable page validation and autocomplete widget support for Safari and iOS browsers https://github.com/kobotoolbox/enketo-express/issues/672
changed: less vertical whitespace between label and radiobuttons/checkboxes
closes https://github.com/kobotoolbox/enketo-express/issues/682

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -63,5 +63,6 @@
     },
     "disable save as draft": false,
     "repeat ordinals": false,
-    "validate continuously": false
+    "validate continuously": false,
+    "validate page": true
 }
