changed: OC: disable first repeat removal as this would break ordinal creation in fs view
https://github.com/kobotoolbox/enketo-express/issues/719

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -65,5 +65,6 @@
     "disable save as draft": false,
     "repeat ordinals": false,
     "validate continuously": false,
-    "validate page": true
+    "validate page": true,
+    "first repeat removable": false
 }
