Revert "changed: OC: disable first repeat removal as this would break ordinal creation in fs view"
This reverts commit 6b1a7f51d36b70decc38fd617cdd833af11aecf9.

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -65,6 +65,5 @@
     "disable save as draft": false,
     "repeat ordinals": false,
     "validate continuously": false,
-    "validate page": true,
-    "first repeat removable": false
+    "validate page": true
 }
