changed: switched from PhantomJS to Chrome headless testing, closes https://github.com/kobotoolbox/enketo-express/issues/736

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ before_script:
   - chmod 777 ./setup/redis/travis-redis.sh
   - ./setup/redis/travis-redis.sh
   - grunt css
+addons: 
+  apt:
+    packages:
+      - google-chrome-stable
 services:
   - redis-server
 notifications:
