--- a/config/default-config.json
+++ b/config/default-config.json
@@ -25,6 +25,11 @@
     "support": {
         "email": "support@kobotoolbox.org"
     },
+    "widgets": [
+        "note", "select-desktop", "select-mobile", "autocomplete", "geo", "textarea",
+        "table", "radio", "date", "time", "datetime", "compact", "file", "draw",
+        "likert", "distress", "horizontal", "image-view", "comment", "image-map", "date-mobile"
+    ],
     "analytics": "google",
     "google": {
         "analytics": {
