--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.0.x",
-        "enketo-core": "4.39.2",
+        "enketo-core": "https://github.com/enketo/enketo-core.git#c67d8ce",
         "enketo-transformer": "1.21.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -61,8 +61,8 @@
         "load-grunt-tasks": "3.x.x",
         "lodash": "4.17.x",
         "morgan": "1.x.x",
-    "papaparse": "4.3.x",
-    "redis": "2.8.0",
+        "papaparse": "4.3.x",
+        "redis": "2.8.0",
         "request": "2.81.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
@@ -97,7 +97,7 @@
     "aliasify": {
         "aliases": {
             "enketo-config": "./public/temp-client-config.json",
-            "widgets": "./public/js/src/module/widgets",
+            "widgets": "./public/js/widgets",
             "translator": "./public/js/src/module/translator",
             "../../js/file-manager": "./public/js/src/module/file-manager"
         }
